# SafeCity-Montogomery

./: bright_data_weather.py  dashboard.py  development.ipynb  generate_report.py  implementation_plan.md.resolved  implementation_plan1.md  main.py  nuisance_predictor.pkl  pyproject.toml  weather.py
.ipynb_checkpoints/: EDA-checkpoint.ipynb  Setup instructions-checkpoint.md  dashboard-checkpoint.py  feature_matrix-checkpoint.csv  main-checkpoint.py  sirens_cleaned-checkpoint.csv
Dataset/: Weather_Sirens.csv  feature_importance.csv  risk_scores.csv
