[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==4.2.2",
    "beautifulsoup4>=4.14.3",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=1.4.0",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "streamlit>=1.19.0",
    "streamlit-folium>=0.26.2",
    "urllib3>=2.6.3",
]
